minor changes to progress monitor

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -195,12 +195,6 @@ ExpenseEditor_EndBookValue=End of Year Value
 
 ExpensesView_title=Expenses ({0})
 
-ExportInvoiceCommand_addingReportParameters=Adding report parameters
-ExportInvoiceCommand_exportingReportToFile=Exporting report to file
-ExportInvoiceCommand_fillingReport=Filling report
-ExportInvoiceCommand_loadingTemplate=Loading template
-ExportInvoiceCommand_startingReportGeneration=Starting report generation
-
 ExportModelToXmlWizard_fileDialogTitle = Choose target file for export
 ExportModelToXmlWizard_title = Export Data to XML
 ExportModelToXmlWizard_message = Export all your current data to an XML file
@@ -297,6 +291,13 @@ ReportGenerationUtil_errorNoReportingService=Reporting service not found, please
 ReportGenerationUtil_successMsg=PDF successfully generated to\n\"{0}\".
 ReportGenerationUtil_successText=PDF Generation finished
 ReportGenerationUtil_confirmOverwriteMsg=File [{0}] already exists.\nPress \"OK\" to overwrite the existing file.
+
+ReportProgressMonitor_addingReportParameters=Adding report parameters
+ReportProgressMonitor_exportingReportToFile=Exporting report to file
+ReportProgressMonitor_fillingReport=Filling report
+ReportProgressMonitor_loadingTemplate=Loading template
+ReportProgressMonitor_startingReportGeneration=Starting report generation
+ReportProgressMonitor_exportFinished=Export Finished
 
 RevenueByYearDialog_details=Details
 RevenueByYearDialog_title=Revenue by year
