--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -181,12 +181,6 @@ ExpenseEditor_EndBookValue=Buchwert
 
 ExpensesView_title=Ausgaben ({0})
 
-ExportInvoiceCommand_addingReportParameters=F\u00FCge Parameter f\u00FCr Report hinzu
-ExportInvoiceCommand_exportingReportToFile=Exportiere Report in Datei
-ExportInvoiceCommand_fillingReport=F\u00FClle Report
-ExportInvoiceCommand_loadingTemplate=Lade template
-ExportInvoiceCommand_startingReportGeneration=Erzeugung des Report gestartet
-
 ExportModelToXmlWizard_fileDialogTitle = Zieldatei f\u00FCr Export w\u00E4hlen
 ExportModelToXmlWizard_title = Daten nach XML Exportieren
 ExportModelToXmlWizard_message = Exportieren Sie alle Daten in eine XML Datei.
@@ -283,6 +277,13 @@ ReportGenerationUtil_errorNoReportingService=Reporting Service ist nicht verf\u0
 ReportGenerationUtil_successMsg=PDF erfolgreich gespeichert nach\n\"{0}\".
 ReportGenerationUtil_successText=PDF Generierung erfolgreich
 ReportGenerationUtil_confirmOverwriteMsg=Datei [{0}] existiert bereits.\nDr\u00FCcken Sie \"OK\" um sie zu \u00FCberschreiben.
+
+ReportProgressMonitor_addingReportParameters=F\u00FCge Parameter f\u00FCr Report hinzu
+ReportProgressMonitor_exportingReportToFile=Exportiere Report in Datei
+ReportProgressMonitor_fillingReport=F\u00FClle Report
+ReportProgressMonitor_loadingTemplate=Lade template
+ReportProgressMonitor_startingReportGeneration=Erzeugung des Report gestartet
+ReportProgressMonitor_exportFinished=Export beendet
 
 RevenueByYearDialog_details=Details
 RevenueByYearDialog_title=Umsatz nach Jahren
