added letterhead exporting command

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -113,6 +113,7 @@ command.import.label = Import...
 command.reports.name = Reports...
 command.reports.incomeStatement.name = Income Statement
 command.reports.incomeStatementDetails.name = Income Statement Details
+command.reports.letterhead = Letterhead
 
 # PREFERENCES
 preferences.accounting=Accounting
