--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -109,6 +109,7 @@ command.import.label = Import...
 command.reports.name = Berichte...
 command.reports.incomeStatement.name = GuV Übersicht
 command.reports.incomeStatementDetails.name = GuV Details
+command.reports.letterhead = Briefkopf
 
 # PREFERENCES
 preferences.accounting=Accounting
