switched to generic report definition via XML config

--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
@@ -13,17 +13,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ###############################################################################
+Letterhead=Letterhead
+
 AbstractReportGenerator_errorTemplateNotFound=Template [{0}] could not be found.
 AbstractReportGenerator_errorFillingReport=Error filling report [{0}] with data.
 AbstractReportGenerator_errorCreatingReport=Error exporting report [{0}].
-
-
-IncomeStatement_inputTax=Input tax:
-IncomeStatement_outputTax=Output tax:
-CashFlowDataSource_taxSum=Sum:
-IncomeStatement_totalExpenses=Total costs
-CashFlowDataSource_vat=VAT
-CashFlowDataSource_vatSum=Result
 
 ExpensesDataSource_expensesTitle=Expenses
 ExpensesDataSource_expenseCategory=Category
@@ -53,19 +47,20 @@ InvoiceDataSource_positionHeaderUnit=Unit
 InvoiceDataSource_totalGrossTitle=Total:
 InvoiceDataSource_totalNetTitle=Sub-Total:
 InvoiceDataSource_totalTaxAmountTitle=Sales Tax (19%):
-InvoiceDataSource_userBankAccountTitle=Account No:
-InvoiceDataSource_userBankBicTitle=BIC:
-InvoiceDataSource_userBankCodeTitle=Bank code:
-InvoiceDataSource_userBankIbanTitle=IBAN:
-InvoiceDataSource_userBankTitle=Bank:
-InvoiceDataSource_userTaxNumberHeader=Tax number:
 InvoiceDataSource_paymentConditionTradeCredit=Payment Terms: Net {0}.
+InvoiceDataSource_userTaxNumberHeader=Tax number:
 
 RevenueReportGenerator_clientTitle=Client
 RevenueReportGenerator_invoiceDate=Invoice date
 RevenueReportGenerator_invoiceNumberTitle=Invoice no.
 RevenueReportGenerator_paymentDateTitle=Paid
 RevenueReportGenerator_revenueTitle=Revenue
+
+bankAccount=Account No:
+bankBIC=BIC:
+bankIBAN=IBAN:
+bankCode=Sort Code:
+bank=Bank:
 
 dateTitle=Date
 descriptionTitle=Description
