--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
@@ -13,6 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 ###############################################################################
+Letterhead=Briefkopf
+
 AbstractReportGenerator_errorTemplateNotFound=Template [{0}] konnte nicht gefunden werden.
 AbstractReportGenerator_errorFillingReport=Fehler beim Füllen des Reports [{0}] mit Daten.
 AbstractReportGenerator_errorCreatingReport=Fehler beim exportieren von [{0}].
@@ -45,11 +47,6 @@ InvoiceDataSource_positionHeaderUnit=Einheit
 InvoiceDataSource_totalGrossTitle=Rechnungsbetrag
 InvoiceDataSource_totalNetTitle=Summe netto gesamt:
 InvoiceDataSource_totalTaxAmountTitle=zzgl. 19% Umsatzsteuer:
-InvoiceDataSource_userBankAccountTitle=Kontonummer:
-InvoiceDataSource_userBankBicTitle=BIC:
-InvoiceDataSource_userBankCodeTitle=Bankleitzahl:
-InvoiceDataSource_userBankIbanTitle=IBAN:
-InvoiceDataSource_userBankTitle=Bankverbindung:
 InvoiceDataSource_userTaxNumberHeader=Steuernummer:
 InvoiceDataSource_paymentConditionTradeCredit=Zahlungsbedingungen: {0} Tage rein netto.
 
@@ -58,6 +55,12 @@ RevenueReportGenerator_invoiceDate=Rechnungsdatum
 RevenueReportGenerator_invoiceNumberTitle=Rechnungsnr.
 RevenueReportGenerator_paymentDateTitle=Zahlungseingang
 RevenueReportGenerator_revenueTitle=Umsatzübersicht
+
+bankAccount=Konto:
+bankBIC=BIC:
+bankIBAN=IBAN:
+bankCode=BLZ:
+bank=Bankverbindung:
 
 dateTitle=Datum
 descriptionTitle=Beschreibung
