cash flow statement is now a generic report template

--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
@@ -15,6 +15,9 @@
 ###############################################################################
 Letterhead=Letterhead
 
+CashFlowStatement=Cash Flow Statement
+CashFlowStatement_title=Cash Flow
+
 AbstractReportGenerator_errorTemplateNotFound=Template [{0}] could not be found.
 AbstractReportGenerator_errorFillingReport=Error filling report [{0}] with data.
 AbstractReportGenerator_errorCreatingReport=Error exporting report [{0}].
@@ -56,12 +59,6 @@ RevenueReportGenerator_invoiceNumberTitle=Invoice no.
 RevenueReportGenerator_paymentDateTitle=Paid
 RevenueReportGenerator_revenueTitle=Revenue
 
-bankAccount=Account No:
-bankBIC=BIC:
-bankIBAN=IBAN:
-bankCode=Sort Code:
-bank=Bank:
-
 dateTitle=Date
 descriptionTitle=Description
 fromTitle=From:
@@ -76,6 +73,17 @@ taxAmountTitle=VAT amount
 taxRateTitle=VAT perc.
 taxTitle=VAT
 untilTitle=Until:
+
+from=From: {0}
+until=Until: {0}
+operatingExpenses=Operating Expenses
+result=Result
+
+bankAccount=Account No:
+bankBIC=BIC:
+bankIBAN=IBAN:
+bankCode=Sort Code:
+bank=Bank:
 
 TaxId=Tax ID: {0}
 Phone=Phone: {0}
