--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
@@ -15,6 +15,9 @@
 ###############################################################################
 Letterhead=Briefkopf
 
+CashFlowStatement=Kapitalfluss
+CashFlowStatement_title=Kapitalfluss
+
 AbstractReportGenerator_errorTemplateNotFound=Template [{0}] konnte nicht gefunden werden.
 AbstractReportGenerator_errorFillingReport=Fehler beim Füllen des Reports [{0}] mit Daten.
 AbstractReportGenerator_errorCreatingReport=Fehler beim exportieren von [{0}].
@@ -76,6 +79,11 @@ taxAmountTitle=USt. Summe
 taxRateTitle=USt.
 taxTitle=USt.
 untilTitle=Bis:
+
+from=Von: {0}
+until=Bis: {0}
+operatingExpenses=Betriebsausgaben
+result=Ergebnis
 
 TaxId=Steuernr: {0}
 Phone=Telephon: {0}
