Invoice generation now generic removed obsolete generator, data source and wrapper classes

--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
@@ -38,20 +38,19 @@ IncomeStatement_totalExpenses=Total Expenses
 IncomeStatement_vat=VAT
 IncomeStatement_vatSum=Result
 
-InvoiceDataSource_invoiceDateTitle=Invoice date:
-InvoiceDataSource_invoiceNumberTitle=Invoice no:
-InvoiceDataSource_invoiceTitle=Invoice
-InvoiceDataSource_positionHeaderDescription=Description
-InvoiceDataSource_positionHeaderPrice=Total price (net)
-InvoiceDataSource_positionHeaderPricePerUnit=Price per unit (net)
-InvoiceDataSource_positionHeaderQuantity=Quantity
-InvoiceDataSource_positionHeaderTax=Tax
-InvoiceDataSource_positionHeaderUnit=Unit
-InvoiceDataSource_totalGrossTitle=Total:
-InvoiceDataSource_totalNetTitle=Sub-Total:
-InvoiceDataSource_totalTaxAmountTitle=Sales Tax (19%):
-InvoiceDataSource_paymentConditionTradeCredit=Payment Terms: Net {0}.
-InvoiceDataSource_userTaxNumberHeader=Tax number:
+invoiceDateTitle=Invoice date:
+invoiceNumberTitle=Invoice no:
+invoiceTitle=Invoice
+invoicePositionDescription=Description
+invoicePositionTotalPrice=Total price (net)
+invoicePositionPricePerUnit=Price per unit (net)
+invoicePositionQuantity=Quantity
+invoicePositionTax=Tax
+invoicePositionUnit=Unit
+invoiceTotalGross=Total:
+invoiceTotalNet=Sub-Total:
+invoiceTotalTax=Sales Tax:
+paymentTermsTRADE_CREDIT=Payment Terms: Net {0}.
 
 RevenueReportGenerator_clientTitle=Client
 RevenueReportGenerator_invoiceDate=Invoice date
@@ -72,6 +71,7 @@ sumTitle=Total:
 taxAmountTitle=VAT amount
 taxRateTitle=VAT perc.
 taxTitle=VAT
+taxes=Taxes
 untilTitle=Until:
 
 from=From: {0}
