--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
@@ -38,20 +38,19 @@ IncomeStatement_taxSum=Saldo:
 IncomeStatement_vat=Umsatzsteuer
 IncomeStatement_vatSum=Ergebnis
 
-InvoiceDataSource_invoiceDateTitle=Rechnungsdatum:
-InvoiceDataSource_invoiceNumberTitle=Rechnungsnummer:
-InvoiceDataSource_invoiceTitle=Rechnung
-InvoiceDataSource_positionHeaderDescription=Leistung/\nArtikel
-InvoiceDataSource_positionHeaderPrice=Preis\n(netto)
-InvoiceDataSource_positionHeaderPricePerUnit=Einzelpreis\n(netto)
-InvoiceDataSource_positionHeaderQuantity=Anzahl
-InvoiceDataSource_positionHeaderTax=Steuer
-InvoiceDataSource_positionHeaderUnit=Einheit
-InvoiceDataSource_totalGrossTitle=Rechnungsbetrag
-InvoiceDataSource_totalNetTitle=Summe netto gesamt:
-InvoiceDataSource_totalTaxAmountTitle=zzgl. 19% Umsatzsteuer:
-InvoiceDataSource_userTaxNumberHeader=Steuernummer:
-InvoiceDataSource_paymentConditionTradeCredit=Zahlungsbedingungen: {0} Tage rein netto.
+invoiceDateTitle=Rechnungsdatum:
+invoiceNumberTitle=Rechnungsnummer:
+invoiceTitle=Rechnung
+invoicePositionDescription=Leistung/\nArtikel
+invoicePositionTotalPrice=Preis\n(netto)
+invoicePositionPricePerUnit=Einzelpreis\n(netto)
+invoicePositionQuantity=Anzahl
+invoicePositionTax=Steuer
+invoicePositionUnit=Einheit
+invoiceTotalGross=Rechnungsbetrag
+invoiceTotalNet=Summe netto gesamt:
+invoiceTotalTax=Summe Umsatzsteuer:
+paymentTermsTRADE_CREDIT=Zahlungsbedingungen: {0} Tage rein netto.
 
 RevenueReportGenerator_clientTitle=Kunde
 RevenueReportGenerator_invoiceDate=Rechnungsdatum
@@ -78,6 +77,7 @@ sumTitle=Summe:
 taxAmountTitle=USt. Summe
 taxRateTitle=USt.
 taxTitle=USt.
+taxes=Steuern
 untilTitle=Bis:
 
 from=Von: {0}
