Expense report now generic (missing dynamic title functionality)

--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
@@ -22,8 +22,9 @@ AbstractReportGenerator_errorTemplateNotFound=Template [{0}] konnte nicht gefund
 AbstractReportGenerator_errorFillingReport=Fehler beim Füllen des Reports [{0}] mit Daten.
 AbstractReportGenerator_errorCreatingReport=Fehler beim exportieren von [{0}].
 
-ExpensesDataSource_expensesTitle=Ausgaben
-ExpensesDataSource_expenseCategory=Kategorie
+Expenses=Ausgaben
+expensesTitle=Ausgaben
+expenseCategoryTitle=Kategorie
 
 IncomeStatement_title=Abschlussbericht
 IncomeStatementSummary_title=GuV \u00DCbersicht
