--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
@@ -22,8 +22,9 @@ AbstractReportGenerator_errorTemplateNotFound=Template [{0}] could not be found.
 AbstractReportGenerator_errorFillingReport=Error filling report [{0}] with data.
 AbstractReportGenerator_errorCreatingReport=Error exporting report [{0}].
 
-ExpensesDataSource_expensesTitle=Expenses
-ExpensesDataSource_expenseCategory=Category
+Expenses=Expenses
+expensesTitle=Expenses
+expenseCategoryTitle=Category
 
 IncomeStatement_title=Income Statement
 IncomeStatementSummary_title=Income Statement Summary
