added key-value model mapper to allow for Map data sources

--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
@@ -18,9 +18,9 @@ Letterhead=Letterhead
 CashFlowStatement=Cash Flow Statement
 CashFlowStatement_title=Cash Flow
 
-AbstractReportGenerator_errorTemplateNotFound=Template [{0}] could not be found.
-AbstractReportGenerator_errorFillingReport=Error filling report [{0}] with data.
-AbstractReportGenerator_errorCreatingReport=Error exporting report [{0}].
+JasperReportGenerator_errorTemplateNotFound=Template [{0}] could not be found.
+JasperReportGenerator_errorFillingReport=Error filling report [{0}] with data.
+JasperReportGenerator_errorCreatingReport=Error exporting report [{0}].
 
 Expenses=Expenses
 expensesTitle=Expenses
@@ -52,6 +52,8 @@ invoiceTotalGross=Total:
 invoiceTotalNet=Sub-Total:
 invoiceTotalTax=Sales Tax:
 paymentTermsTRADE_CREDIT=Payment Terms: Net {0}.
+
+ModelWrapper_errorIllegalTypeForDataSource=Cannot build datasource for property [{0}] of type [{1}]. Only collections and maps are supported
 
 RevenueReportGenerator_clientTitle=Client
 RevenueReportGenerator_invoiceDate=Invoice date
