--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
@@ -18,9 +18,9 @@ Letterhead=Briefkopf
 CashFlowStatement=Kapitalfluss
 CashFlowStatement_title=Kapitalfluss
 
-AbstractReportGenerator_errorTemplateNotFound=Template [{0}] konnte nicht gefunden werden.
-AbstractReportGenerator_errorFillingReport=Fehler beim Füllen des Reports [{0}] mit Daten.
-AbstractReportGenerator_errorCreatingReport=Fehler beim exportieren von [{0}].
+JasperReportGenerator_errorTemplateNotFound=Template [{0}] konnte nicht gefunden werden.
+JasperReportGenerator_errorFillingReport=Fehler beim Füllen des Reports [{0}] mit Daten.
+JasperReportGenerator_errorCreatingReport=Fehler beim exportieren von [{0}].
 
 Expenses=Ausgaben
 expensesTitle=Ausgaben
@@ -52,6 +52,8 @@ invoiceTotalGross=Rechnungsbetrag
 invoiceTotalNet=Summe netto gesamt:
 invoiceTotalTax=Summe Umsatzsteuer:
 paymentTermsTRADE_CREDIT=Zahlungsbedingungen: {0} Tage rein netto.
+
+ModelWrapper_errorIllegalTypeForDataSource=Attribut [{0}] vom Typ [{1}] kann keine Datenquelle sein. Nur Collections und Maps sind erlaubt.
 
 RevenueReportGenerator_clientTitle=Kunde
 RevenueReportGenerator_invoiceDate=Rechnungsdatum
