IncomeStatementReport is now generic finished move to generic reports

--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages.properties
@@ -60,7 +60,9 @@ RevenueReportGenerator_paymentDateTitle=Paid
 RevenueReportGenerator_revenueTitle=Revenue
 
 dateTitle=Date
+depreciationTitle=Abschreibungen
 descriptionTitle=Description
+ebitTitle=EBIT:
 fromTitle=From:
 grossPriceTitle=Amount (gross)
 operatingProfitTitle=Operating Profit
