--- a/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
+++ b/accounting-reporting/src/de/togginho/accounting/reporting/internal/messages_de.properties
@@ -66,7 +66,9 @@ bankCode=BLZ:
 bank=Bankverbindung:
 
 dateTitle=Datum
+depreciationTitle=Abschreibungen
 descriptionTitle=Beschreibung
+ebitTitle=EBIT:
 fromTitle=Von:
 grossPriceTitle=Betrag (brutto)
 operatingProfitTitle=Betriebsgewinn
