--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -62,6 +62,17 @@ AccountingService_errorClientNameExists=Kunde mit Namen [{0}] existiert bereits.
 AccountingService_errorClientNumberExists=Kunde mit Nummer [{0}] existiert bereits.
 
 ###############################################################################
+# ExpenseImporter errors/warnings
+###############################################################################
+
+ExpenseImporter_WarningUnparseableAmount=Unlesbarer Betrag: {0}
+ExpenseImporter_WarningUnparseableDate=Unlesbares Datum: {0}
+ExpenseImporter_WarningUnparseableTaxRate=Unlesbarer Steuersatz: {0}
+ExpenseImporter_WarningUnknownTaxRate=Unbekannter Steuersatz: {0}
+ExpenseImporter_WarningInvalidType=Ungültiger Typ: {0}
+ExpenseImporter_ErrorReadingFile=Fehler beim Lesen der Datei
+
+###############################################################################
 # ModelMapper errors
 ###############################################################################
 ModelMapper_errorDuringExport=Error while exporting data!
