--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -19,6 +19,7 @@
 # These should not be localized.
 # All other entries below should be translated in their respective bundle files
 ###############################################################################
+iconsError=icons/error.png
 iconsExportToPdf=icons/page_white_acrobat.png
 iconsGroupEdit=icons/group_edit.png
 iconsInvoiceCancelled=icons/cancel.png
@@ -208,11 +209,18 @@ FindInvoiceCommand_noresultMessage=Invoice with number [{0}] wasn't found!
 FindInvoiceCommand_noresultTitle=Not found
 
 ImportExpensesWizard_errorFileNotValid=File does not exist or is a directory!
+ImportExpensesWizard_errorNoImportResult=Import result is empty - please check your settings and try again.
 ImportExpensesWizard_fileDialogTitle=Select CSV file to import
-ImportExpensesWizard_message=Import expenses from a comma-separated value (CSV) file
 ImportExpensesWizard_sourceFile=Source File:
 ImportExpensesWizard_summary={0} of {1} selected
 ImportExpensesWizard_title=Import Expenses
+ImportExpensesWizard_pageOne=Import expenses from a comma-separated value (CSV) file
+ImportExpensesWizard_pageTwo=Select imported entries to save to your database
+ImportExpensesWizard_decimalMark=Decimal mark:
+ImportExpensesWizard_datePattern=Date format:
+ImportExpensesWizard_errorInvalidDatePattern=[{0}] is not a valid date format!
+ImportExpensesWizard_example=Example:
+ImportExpensesWizard_warningsExist=Warnings occurred during import - check individual entries for details.
 
 ImportFromXmlWizard_dataFileLabel=Data file:
 ImportFromXmlWizard_errorDataFileExists=Cannot choose an existing file for your data\!
