--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -194,11 +194,18 @@ FindInvoiceCommand_noresultMessage=Rechnung [{0}] konnte nicht gefunden werden!
 FindInvoiceCommand_noresultTitle=Nicht gefunden
 
 ImportExpensesWizard_errorFileNotValid=Datei existiert nicht oder ist ein Ordner
+ImportExpensesWizard_errorNoImportResult=Import erzielte kein Ergebnis - bitte \u00FCberpr\u00FCfen Sie die Einstellungen und versuchen Sie es erneut.
 ImportExpensesWizard_fileDialogTitle=Zu importierende Datei ausw\u00E4hlen
-ImportExpensesWizard_message=Ausgaben aus CSV Datei importieren
 ImportExpensesWizard_sourceFile=Quelldatei:
 ImportExpensesWizard_summary={0} von {1} ausgew\u00E4hlt
 ImportExpensesWizard_title=Ausgaben Importieren
+ImportExpensesWizard_pageOne=Ausgaben aus CSV Datei importieren
+ImportExpensesWizard_pageTwo=W\u00E4hlen Sie importierte Ausgaben, die in Ihrer Datenbank gespeichert werden sollen.
+ImportExpensesWizard_decimalMark=Dezimaltrennzeichen:
+ImportExpensesWizard_datePattern=Datumsformat:
+ImportExpensesWizard_errorInvalidDatePattern=[{0}] ist kein g\u00FCltiges Datumsformat!
+ImportExpensesWizard_example=Beispiel:
+ImportExpensesWizard_warningsExist=Import produzierte Warnungen - Details siehe einzelne Eintr\u00E4ge.
 
 ImportFromXmlWizard_dataFileLabel=Speicherdatei:
 ImportFromXmlWizard_errorDataFileExists=Speicherdatei existiert bereits, bitte neue w\u00E4hlen.
