changed expense import params to enums

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -106,3 +106,13 @@ TimeFrameType_lastMonth=Last Month
 TimeFrameType_currentYear=Current Year
 TimeFrameType_lastYear=Last Year
 TimeFrameType_custom=Custom
+
+###############################################################################
+# Date Format Patterns
+###############################################################################
+DateFormatPattern_DMY=Day Month Year
+DateFormatPattern_MDY=Month Day Year
+DateFormatPattern_YMD=Year Month Day
+DateFormatPattern_MYD=Month Year Day
+DateFormatPattern_DYM=Day Year Month
+DateFormatPattern_YDM=Year Day Month
