--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -114,3 +114,13 @@ TimeFrameType_lastMonth=Letzter Monat
 TimeFrameType_currentYear=Aktuelles Jahr
 TimeFrameType_lastYear=Letztes Jahr
 TimeFrameType_custom=Auswahl
+
+###############################################################################
+# Date Format Patterns
+###############################################################################
+DateFormatPattern_DMY=Tag Monat Jahr
+DateFormatPattern_MDY=Monat Tag Jahr
+DateFormatPattern_YMD=Jahr Monat Tag
+DateFormatPattern_MYD=Monat Jahr Tag
+DateFormatPattern_DYM=Tag Jahr Monat
+DateFormatPattern_YDM=Jahr Tag Monat
