added quick report generation from expenses view

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -85,6 +85,7 @@ command.changeTimeFrame.lastMonth = Last Month
 command.changeTimeFrame.currentYear = Current Year
 command.changeTimeFrame.lastYear = Last Year
 command.changeTimeFrame.custom = Custom...
+command.expenses.report = Create expense report
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
