--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -83,6 +83,7 @@ command.changeTimeFrame.lastMonth = Letzter Monat
 command.changeTimeFrame.currentYear = Aktuelles Jahr
 command.changeTimeFrame.lastYear = Letztes Jahr
 command.changeTimeFrame.custom = Auswahl...
+command.expenses.report = Ausgabenbericht Erzeugen
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
