added option to display all expenses in view without date constraints

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -143,6 +143,7 @@ CancelInvoiceCommand_confirmText=Confirm cancel
 
 ChangeExpensesViewTimeFrameCommand_message=Select the timeframe for expenses to be displayed
 ChangeExpensesViewTimeFrameCommand_title=Timeframe configuration
+ChangeExpensesViewTimeFrameCommand_allExpenses=Show all Expenses (no time frame constraint)
 
 ChangeInvoicesFilterCommand_message=Select invoice states to display
 ChangeInvoicesFilterCommand_title=Invoices filter
@@ -195,6 +196,8 @@ ExpenseEditor_BeginningBookValue=Book Value
 ExpenseEditor_EndBookValue=End of Year Value
 
 ExpensesView_title=Expenses ({0})
+ExpensesView_allExpenses= - 
+ExpensesView_statusLine={0} Expenses found
 
 ExportModelToXmlWizard_fileDialogTitle = Choose target file for export
 ExportModelToXmlWizard_title = Export Data to XML
