--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -128,6 +128,7 @@ CancelInvoiceCommand_confirmText=Rechnung stornieren?
 
 ChangeExpensesViewTimeFrameCommand_message=W\u00E4hlen Sie den Zeitraum f\u00FCr Ausgaben, die angezeigt werden sollen
 ChangeExpensesViewTimeFrameCommand_title=Zeitraumeinstellung
+ChangeExpensesViewTimeFrameCommand_allExpenses=Alle anzeigen (ohne zeitliche Eingrenzung)
 
 ChangeInvoicesFilterCommand_message=W\u00E4hlen Sie Rechnungszust\u00E4nde die angezeigt/versteckt werden sollen.
 ChangeInvoicesFilterCommand_title=Filter bearbeiten
@@ -180,6 +181,8 @@ ExpenseEditor_BeginningBookValue=Ausgangswert
 ExpenseEditor_EndBookValue=Buchwert
 
 ExpensesView_title=Ausgaben ({0})
+ExpensesView_allExpenses= - 
+ExpensesView_statusLine={0} Ausgaben gefunden
 
 ExportModelToXmlWizard_fileDialogTitle = Zieldatei f\u00FCr Export w\u00E4hlen
 ExportModelToXmlWizard_title = Daten nach XML Exportieren
