finished new time frame selectors

--- a/accounting-core/src/de/togginho/accounting/messages.properties
+++ b/accounting-core/src/de/togginho/accounting/messages.properties
@@ -106,6 +106,8 @@ TimeFrameType_lastMonth=Last Month
 TimeFrameType_currentYear=Current Year
 TimeFrameType_lastYear=Last Year
 TimeFrameType_custom=Custom
+TimeFrameType_month=Month
+TimeFrameType_wholeYear=Whole Year
 
 ###############################################################################
 # Date Format Patterns
