--- a/accounting-core/src/de/togginho/accounting/messages_de.properties
+++ b/accounting-core/src/de/togginho/accounting/messages_de.properties
@@ -114,6 +114,8 @@ TimeFrameType_lastMonth=Letzter Monat
 TimeFrameType_currentYear=Aktuelles Jahr
 TimeFrameType_lastYear=Letztes Jahr
 TimeFrameType_custom=Auswahl
+TimeFrameType_month=Monat
+TimeFrameType_wholeYear=Gesamtes Jahr
 
 ###############################################################################
 # Date Format Patterns
