--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -55,6 +55,7 @@ labelClient=Client
 labelClientDetails=Client details
 labelClientName=Client name:
 labelClientNumber=Client number:
+labelCustom=Custom:
 labelDate=Date
 labelDepreciationMethod=Depreciation Method
 labelDepreciationPeriodInYears=Useful Life (years)
@@ -72,6 +73,7 @@ labelInvoiceDate=Invoice date:
 labelInvoiceDueDate=Due date:
 labelInvoiceNo=Invoice number:
 labelMobile=Mobile:
+labelMonth=Month:
 labelName=Name:
 labelNet=Net
 labelPaymentTerms=Payment Terms
@@ -79,6 +81,8 @@ labelPaymentType=Payment Type:
 labelPaymentTarget=Payment target (in days):
 labelPhone=Phone:
 labelPostalCode=Post Code:
+labelPresets=Presets:
+labelPresetsNone=None / Custom
 labelPricePerUnit=Price per Unit
 labelQuantity=Quantity
 labelRevenue=Revenue
@@ -124,6 +128,8 @@ AbstractClientHandler_message=Please select a client to delete
 AbstractInvoiceHandler_errorNoInvoiceInCurrentEditor=No invoice in current editor\!
 AbstractInvoiceHandler_errorNoInvoiceInSelection=No invoice in current selection\!
 
+AbstractTimeFrameSelectionHandler_useTimeFrame=Constrict query to time frame
+
 AccountingSplashHandler_errorUserNotFoundInDbFile=User [{0}] not found in data file [{1}].
 AccountingSplashHandler_setupDialogCancelledMsg=Cannot continue application without necessary info - exiting now...
 AccountingSplashHandler_welcomeDialogTitle=Welcome to togginho Accounting!
@@ -143,10 +149,11 @@ CancelInvoiceCommand_confirmText=Confirm cancel
 
 ChangeExpensesViewTimeFrameCommand_message=Select the timeframe for expenses to be displayed
 ChangeExpensesViewTimeFrameCommand_title=Timeframe configuration
-ChangeExpensesViewTimeFrameCommand_allExpenses=Show all Expenses (no time frame constraint)
+ChangeExpensesViewTimeFrameCommand_types=Select the expense types to display
 
 ChangeInvoicesFilterCommand_message=Select invoice states to display
 ChangeInvoicesFilterCommand_title=Invoices filter
+ChangeInvoicesFilterCommand_states=States to filter by
 
 ChooseExportTargetDialog_labelPdfFiles=PDF files
 ChooseExportTargetDialog_message=Choose the path and filename of the report to generate, and whether to open it in an external program afterwards
