--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -40,6 +40,7 @@ labelClient=Kunde
 labelClientDetails=Kundendetails
 labelClientName=Kundenname:
 labelClientNumber=Kundennr:
+labelCustom=Benutzerdefiniert:
 labelDate=Datum
 labelDepreciationMethod=Abschreibungsmethode
 labelDepreciationPeriodInYears=Nutzungsdauer (Jahre)
@@ -57,6 +58,7 @@ labelInvoiceDate=Rechnungsdatum:
 labelInvoiceDueDate=Zahlungsziel:
 labelInvoiceNo=Rechnungsnummer:
 labelMobile=Mobil:
+labelMonth=Monat:
 labelName=Name:
 labelNet=Netto
 labelPaymentTerms=Zahlungsbedingungen
@@ -64,6 +66,8 @@ labelPaymentType=Zahlungsart:
 labelPaymentTarget=Zahlungsziel (in Tagen):
 labelPhone=Telefon:
 labelPostalCode=Postleitzahl:
+labelPresets=Voreinstellungen
+labelPresetsNone=Keine / Benutzerdefiniert
 labelPricePerUnit=Einzelpreis
 labelQuantity=Anzahl
 labelRevenue=Umsatz
@@ -109,6 +113,8 @@ AbstractClientHandler_message=Bitte w\u00E4hlen Sie einen Kunden zum l\u00F6sche
 AbstractInvoiceHandler_errorNoInvoiceInCurrentEditor=Keine Rechnung im aktiven Editor\!
 AbstractInvoiceHandler_errorNoInvoiceInSelection=Keine Rechnung ausgew\u00E4lt\!
 
+AbstractTimeFrameSelectionHandler_useTimeFrame=Suche auf Zeitraum einschr\u00E4nken
+
 AccountingSplashHandler_errorUserNotFoundInDbFile=Benutzer [{0}] konnte in Speicherdatei [{1}] nicht gefunden werden!
 AccountingSplashHandler_setupDialogCancelledMsg=Notwendige Angaben f\u00FCr Programmausf\u00FChrung fehlen - Abbruch.
 AccountingSplashHandler_welcomeDialogTitle=Willkommen bei togginho Accounting!
@@ -128,10 +134,11 @@ CancelInvoiceCommand_confirmText=Rechnung stornieren?
 
 ChangeExpensesViewTimeFrameCommand_message=W\u00E4hlen Sie den Zeitraum f\u00FCr Ausgaben, die angezeigt werden sollen
 ChangeExpensesViewTimeFrameCommand_title=Zeitraumeinstellung
-ChangeExpensesViewTimeFrameCommand_allExpenses=Alle anzeigen (ohne zeitliche Eingrenzung)
+ChangeExpensesViewTimeFrameCommand_types=Ausgabentypen
 
 ChangeInvoicesFilterCommand_message=W\u00E4hlen Sie Rechnungszust\u00E4nde die angezeigt/versteckt werden sollen.
 ChangeInvoicesFilterCommand_title=Filter bearbeiten
+ChangeInvoicesFilterCommand_states=Nach Zust\u00E4nden filtern
 
 ChooseExportTargetDialog_labelPdfFiles=PDF Dateien
 ChooseExportTargetDialog_message=W\u00E4hlen Sie die Zieldatei f\u00FCr den Export, und ob diese danach in einem externen Programm ge\u00F6ffnet werden soll
