status messages in expense and invoice view

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -28,6 +28,7 @@ iconsInvoiceEdit=icons/page_edit.png
 iconsInvoiceOverdue=icons/page_error.png
 iconsInvoicePaid=icons/money.png
 iconsInvoiceSend=icons/page_go.png
+iconsInvoices=icons/page.png
 iconsUserEdit=icons/user_edit.png
 iconsRevenue=icons/money_add.png
 iconsExpenses=icons/money_delete.png
@@ -262,6 +263,7 @@ InvoicePositionWizard_newDesc=Enter details of a new invoice position
 InvoiceView_number=No.
 InvoiceView_state=State
 InvoiceView_dueDate=Due date
+InvoiceView_statusLine={0} invoices found
 
 LanguageSelectionHandler_Language=Language:
 LanguageSelectionHandler_Title=Change Language...
