--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -247,6 +247,7 @@ InvoicePositionWizard_newDesc=Geben Sie Details einer neuen Rechnungsposition ei
 InvoiceView_number=Nr.
 InvoiceView_state=Status
 InvoiceView_dueDate=Zahlungsziel
+InvoiceView_statusLine={0} Rechnungen gefunden
 
 LanguageSelectionHandler_Language=Sprache:
 LanguageSelectionHandler_Title=Sprache \u00C4ndern
