reworked time frame selection dialog - presets are now simply buttons

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -56,7 +56,7 @@ labelClient=Client
 labelClientDetails=Client details
 labelClientName=Client name:
 labelClientNumber=Client number:
-labelCustom=Custom:
+labelCustom=Custom
 labelDate=Date
 labelDepreciationMethod=Depreciation Method
 labelDepreciationPeriodInYears=Useful Life (years)
