--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -40,7 +40,7 @@ labelClient=Kunde
 labelClientDetails=Kundendetails
 labelClientName=Kundenname:
 labelClientNumber=Kundennr:
-labelCustom=Benutzerdefiniert:
+labelCustom=Benutzerdefiniert
 labelDate=Datum
 labelDepreciationMethod=Abschreibungsmethode
 labelDepreciationPeriodInYears=Nutzungsdauer (Jahre)
