added XML-export success message

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -213,6 +213,8 @@ ExportModelToXmlWizard_message = Export all your current data to an XML file
 ExportModelToXmlWizard_progressMessage = Exporting...
 ExportModelToXmlWizard_targetFile = Target File:
 ExportModelToXmlWizard_warningTargetFileExists = Target file already exists and will be overwritten!
+ExportModelToXmlWizard_finishedTitle = Export finished
+ExportModelToXmlWizard_finishedMsg = Export finished successfully to file [{0}]
 
 FindInvoiceCommand_inputMessage=Enter the invoice number to search for
 FindInvoiceCommand_inputTitle=Find Invoice
