--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -197,6 +197,8 @@ ExportModelToXmlWizard_message = Exportieren Sie alle Daten in eine XML Datei.
 ExportModelToXmlWizard_progressMessage = Exportiere...
 ExportModelToXmlWizard_targetFile = Zieldatei:
 ExportModelToXmlWizard_warningTargetFileExists = Zieldatei existiert bereits und wird \u00FCberschrieben!
+ExportModelToXmlWizard_finishedTitle = Export beendet
+ExportModelToXmlWizard_finishedMsg = Export nach Datei [{0}] erfolgreich beendet
 
 FindInvoiceCommand_inputMessage=Rechnungsnummer f\u00FCr Suche eingeben:
 FindInvoiceCommand_inputTitle=Rechnung suchen
