--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -119,3 +119,9 @@ command.reports.letterhead = Letterhead
 # PREFERENCES
 preferences.accounting=Accounting
 preferences.reporting=Reporting
+
+aboutTextBla=togginho Accounting\n\
+\n\
+Version: 1.0.0\n\
+\n\
+(c) 2010,2013 Thorsten Frank. Visit http://www.tfsw.de
