renamed income statement back to cash flow statement

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -112,8 +112,8 @@ command.import.label = Import...
 
 # COMMANDS - REPORTS
 command.reports.name = Reports...
+command.reports.cashFlow.name = Cash Flow Statement
 command.reports.incomeStatement.name = Income Statement
-command.reports.incomeStatementDetails.name = Income Statement Details
 command.reports.letterhead = Letterhead
 
 # PREFERENCES
