--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -108,8 +108,8 @@ command.import.label = Import...
 
 # COMMANDS - REPORTS
 command.reports.name = Berichte...
-command.reports.incomeStatement.name = GuV Übersicht
-command.reports.incomeStatementDetails.name = GuV Details
+command.reports.cashFlow.name = Kapitalfluss
+command.reports.incomeStatement.name = GuV
 command.reports.letterhead = Briefkopf
 
 # PREFERENCES
