--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -148,6 +148,16 @@ AddressWizardPage_title=Contact details
 CancelInvoiceCommand_confirmMessage=Are you sure you want to cancel invoice [{0}] ?
 CancelInvoiceCommand_confirmText=Confirm cancel
 
+CashFlowStatementDialog_grossProfit=Gross Profit
+CashFlowStatementDialog_inputTax=Input Tax
+CashFlowStatementDialog_operatingExpenses=Operating expenses
+CashFlowStatementDialog_outputTax=Output Tax
+CashFlowStatementDialog_Result=Result
+CashFlowStatementDialog_sum=Sum
+CashFlowStatementDialog_title=Cash Flow Statement
+CashFlowStatementDialog_totalExpenses=Total Expenses
+CashFlowStatementDialog_fileNameSuggestion=CashFlowStatement
+
 ChangeExpensesViewTimeFrameCommand_message=Select the timeframe for expenses to be displayed
 ChangeExpensesViewTimeFrameCommand_title=Timeframe configuration
 ChangeExpensesViewTimeFrameCommand_types=Select the expense types to display
@@ -240,18 +250,8 @@ ImportFromXmlWizard_message=Select the XML file to import and the new file locat
 ImportFromXmlWizard_xmlFileLabel=File to import:
 ImportFromXmlWizard_xmlFileSelectText=Select XML File to import
 
-IncomeStatementDialog_grossProfit=Gross Profit
-IncomeStatementDialog_inputTax=Input Tax
-IncomeStatementDialog_operatingExpenses=Operating expenses
-IncomeStatementDialog_outputTax=Output Tax
-IncomeStatementDialog_Result=Result
-IncomeStatementDialog_sum=Sum
 IncomeStatementDialog_title=Income Statement
-IncomeStatementDialog_totalExpenses=Total Expenses
-IncomeStatementDialog_fileNameSuggestion=IncomeStatementSummary
-
-IncomeStatementDetailsDialog_title=Detailed Income Statement
-IncomeStatementDetailsDialog_fileNameSuggestion=Abschlussbericht
+IncomeStatementDialog_fileNameSuggestion=IncomeStatement
 
 InvoiceEditor_details=Invoice Positions
 InvoiceEditor_header=Edit invoice
